--- a/com.googlecode.iterm2.plist
+++ b/com.googlecode.iterm2.plist
@@ -130,9 +130,9 @@
 	<key>NSWindow Frame NSFontPanel</key>
 	<string>0 87 1280 556 0 0 1280 777 </string>
 	<key>NSWindow Frame Preferences</key>
-	<string>269 170 606 456 0 0 1280 777 </string>
+	<string>269 286 606 456 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 0</key>
-	<string>0 66 1277 711 0 0 1280 777 </string>
+	<string>0 54 1277 723 0 0 1280 777 </string>
 	<key>NSWindow Frame iTerm Window 1</key>
 	<string>152 309 570 452 0 0 1280 777 </string>
 	<key>New Bookmarks</key>
@@ -895,6 +895,8 @@
 	<false/>
 	<key>PasteFromClipboard</key>
 	<false/>
+	<key>PasteTabToStringTabStopSize</key>
+	<integer>4</integer>
 	<key>PointerActions</key>
 	<dict>
 		<key>Button,1,1,,</key>
