--- a/apache2/httpd.conf
+++ b/apache2/httpd.conf
@@ -268,7 +268,7 @@ DocumentRoot "/Library/WebServer/Documents"
 # is requested.
 #
 <IfModule dir_module>
-    DirectoryIndex index.html
+    DirectoryIndex index.html index.php
 </IfModule>
 
 #
