--- a/apache2/extra/httpd-vhosts.conf
+++ b/apache2/extra/httpd-vhosts.conf
@@ -10,6 +10,12 @@ Options FollowSymLinks
 AllowOverride All
 Require all granted
 </Directory>
+<Directory "/Users/zhome/Webroot/app-web">
+DirectoryIndex base.php index.php index.html
+Options FollowSymLinks
+AllowOverride All
+Require all granted
+</Directory>
 #############Port vhost#############
 #listen 9999
 #<VirtualHost *:9999>
@@ -26,11 +32,17 @@ Require all granted
 ServerAdmin zhihuacui@ethercap.com 
 DocumentRoot "/Users/zhome/Webroot/admin"
 ServerName admin.local.com
-ErrorLog /Users/zhome/Webroot/logs/admin.error_log
+ErrorLog /Users/zhome/Webroot/outerLog/admin.error_log
+</VirtualHost>
+<VirtualHost 127.0.0.1:80>
+ServerAdmin zhihuacui@ethercap.com 
+DocumentRoot "/Users/zhome/Webroot/app-web"
+ServerName app-web.local.com
+ErrorLog /Users/zhome/Webroot/outerLog/app-web.error_log
 </VirtualHost>
 <VirtualHost 127.0.0.1:80>
 ServerAdmin zhihuacui@ethercap.com 
 DocumentRoot "/Users/zhome/Webroot/admin-api"
 ServerName api.local.com
-ErrorLog /Users/zhome/Webroot/logs/api.error_log
+ErrorLog /Users/zhome/Webroot/outerLog/api.error_log
 </VirtualHost>
