--- a/apache2/httpd.conf
+++ b/apache2/httpd.conf
@@ -233,8 +233,8 @@ ServerName localhost
 # documents. By default, all requests are taken from this directory, but
 # symbolic links and aliases may be used to point to other locations.
 #
-DocumentRoot "/Library/WebServer/Documents"
-<Directory "/Library/WebServer/Documents">
+DocumentRoot "/Users/zhome/Webserver"
+<Directory "/Users/zhome/Webserver">
     #
     # Possible values for the Options directive are "None", "All",
     # or any combination of:
