--- a/apache2/extra/httpd-vhosts.conf
+++ b/apache2/extra/httpd-vhosts.conf
@@ -1,3 +1,9 @@
+<Directory "/Users/zhome/Webserver">
+DirectoryIndex index.php index.html
+Options FollowSymLinks
+AllowOverride All
+Require all granted
+</Directory>
 <Directory "/Users/zhome/Webroot/admin">
 DirectoryIndex index.php index.html
 Options FollowSymLinks
@@ -16,18 +22,11 @@ Options FollowSymLinks
 AllowOverride All
 Require all granted
 </Directory>
-#############Port vhost#############
-#listen 9999
-#<VirtualHost *:9999>
-#DocumentRoot "/Users/zhome/Webroot/admin"
-#ServerName localhost:9999
-#</VirtualHost>
-#listen 8080
-#<VirtualHost *:8080>
-#DocumentRoot "/Users/zhome/Webroot/admin-api"
-#ServerName localhost:8080
-#</VirtualHost>
-##############Name vhost#############
+<VirtualHost 127.0.0.1:80>
+ServerAdmin zhihuacui@ethercap.com 
+DocumentRoot "/Users/zhome/Webserver"
+ServerName local.com
+</VirtualHost>
 <VirtualHost 127.0.0.1:80>
 ServerAdmin zhihuacui@ethercap.com 
 DocumentRoot "/Users/zhome/Webroot/admin"
